--- a/controlsLab/index.html
+++ b/controlsLab/index.html
@@ -38,13 +38,13 @@
             <div>
                 <p><i class="fa-solid fa-venus-mars"></i> Выберите ваш пол:</p>
                 <input type="radio" id="choice1" name="gender" value="idk" checked/>
-                <label for="genderChoice1">Не знаю</label>
+                <label for="choice1">Не знаю</label>
                 <i class="fa-solid fa-genderless"></i>
                 <input type="radio" id="choice2" name="gender" value="male" />
-                <label for="genderChoice2">Мужской</label>
+                <label for="choice2">Мужской</label>
                 <i class="fa-solid fa-mars"></i>
                 <input type="radio" id="choice3" name="gender" value="female" />
-                <label for="genderChoice3">Женский</label>
+                <label for="choice3">Женский</label>
                 <i class="fa-solid fa-venus"></i>
             </div>
             
@@ -61,7 +61,7 @@
             
             <div>
                 <i class="fa-brands fa-adversal"></i>
-                <label for="agreement">Согласен на рассылку персональных предложений:</label>
+                <label for="agreementCheckbox">Согласен на рассылку персональных предложений:</label>
                 <input type="checkbox" name="agreementCheckbox" required>
             </div>
             <div>
@@ -78,7 +78,7 @@
 
             <div>
                 <i class="fa-solid fa-file-lines"></i>
-                <label for="fileLoad">Cогласие на обработку персональных данных:</label>
+                <label for="personalDataFile">Cогласие на обработку персональных данных:</label>
                 <br>
                 <input type="file" id="personalDataFile" name="personalDataFile" accept="image/png, image/jpeg" />
             </div>
