--- a/mdnPage/index.html
+++ b/mdnPage/index.html
@@ -46,12 +46,10 @@
             </header>
             <div class="header-bottom">
                 <div class="container">
-                    <div class="header-bottom-items">
-                        <a class="header-bottom-item" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ&ab">Веб технологии для разработчиков</a>
-                        <a> > </a>
+                    <a class="header-bottom-item" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ&ab">Веб технологии для разработчиков</a>
+                        <a>></a>
                         <a class="header-bottom-item" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ&ab">HTML</a>
                         <a class="language-change-item" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ&ab"><img src="resources/language.png"> Русский</a>
-                    </div>
                 </div class="container">
                 
                 
@@ -65,7 +63,30 @@
             <div class="up-note">
                 <img class="up-note-image" src="resources/upnote.png">
                 <a class="up-note-text"> Эта страница была переведена с английского языка силами сообщества. Вы тоже можете внести свой вклад, присоединившись к русскоязычному сообществу MDN Web Docs.</a>
+            </div>
 
+            <div class="left-menu">
+                <div class="filter-input">
+                    <img src="resources/filter.png" class="filter-image">
+                    <input type="text" class="filter-input">
+                </div>
+
+                <div class="left-menu-selector">
+                    <ul class="left-menu-selector">
+                        <li><a class="left-menu-selector-main" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ&ab">HTML</a></li>
+                        <li><a class="left-menu-selector-item"> </a></li>
+                        <li><a class="left-menu-selector-main" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ&ab">Уроки</a></li>
+                        <li><a class="left-menu-selector-item" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ&ab">Основы HTML</a></li>    
+                        <li><a class="left-menu-selector-item" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ&ab"><details><summary>Введение в HTML</summary></details></a></li>
+                        <li><a class="left-menu-selector-item" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ&ab"><details><summary>Мультимедиа и встраивание</summary></details></a></li> 
+                        <li><a class="left-menu-selector-item" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ&ab"><details><summary>HTML таблицы</summary></details></a></li> 
+                        <li><a class="left-menu-selector-main" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ&ab">Справочники</a></li>
+                        <li><a class="left-menu-selector-item" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ&ab"><details><summary>HTML элементы</summary></details></a></li>
+                        <li><a class="left-menu-selector-item" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ&ab"><details><summary>Глобальные атрибуты</summary></details></a></li>
+                        <li><a class="left-menu-selector-item" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ&ab"><details><summary>Атрибуты</summary></details></a></li>
+                        <li><a class="left-menu-selector-item" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ&ab"><details><summary>Типы  <code>input</code></summary></details></a></li>    
+                    </ul>
+                </div> 
             </div>
         </div>
     </body>
