--- a/mdnPage/index.html
+++ b/mdnPage/index.html
@@ -50,8 +50,9 @@
             <div class="header-bottom">
                 <div class="container">
                     <a class="header-bottom-item" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ&ab">Веб технологии для разработчиков</a>  <!--Опять же, это элемент блока, а не блок-->
-                        <a class="header-bottom-item" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ&ab">HTML</a>
-                        <a class="language-change-item" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ&ab"><img src="resources/language.png"> Русский</a>
+                    <p> > </p> 
+                    <a class="header-bottom-item" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ&ab">HTML</a>
+                    <a class="language-change-item" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ&ab"><img src="resources/language.png"> Русский</a>
                 </div>
             </div>
 
@@ -69,34 +70,34 @@
 
 
             <div class="main-block">
-                <div class="left-menu">
+                <div class="primary-sidebar">
                     <div class="filter-input">
                         <img src="resources/filter.png" class="filter-image">
                         <a class="filter-input-text">Filter</a>
                     </div>
     
-                    <div class="left-menu-selector">
-                        <ul class="left-menu-selector">
-                            <li><a class="left-menu-selector-main" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ&ab">HTML</a></li>
-                            <li><a class="left-menu-selector-item"> </a></li> <!-- Визуально HTML отделен от другими, следовательно это отдельный блок. Поэтому следует вместо 1 большого списка ссылок сделать 4 отдельных списка, и добавить между ними отступ-->
-                            <li><a class="left-menu-selector-main" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ&ab">Уроки</a></li>
-                            <li><a class="left-menu-selector-item" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ&ab">Основы HTML</a></li>    
-                            <li><a class="left-menu-selector-item" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ&ab"><details><summary>Введение в HTML</summary></details></a></li>
-                            <li><a class="left-menu-selector-item" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ&ab"><details><summary>Мультимедиа и встраивание</summary></details></a></li> 
-                            <li><a class="left-menu-selector-item" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ&ab"><details><summary>HTML таблицы</summary></details></a></li> 
-                            <li><a class="left-menu-selector-main" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ&ab">Справочники</a></li>
-                            <li><a class="left-menu-selector-item" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ&ab"><details><summary>HTML элементы</summary></details></a></li>
-                            <li><a class="left-menu-selector-item" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ&ab"><details><summary>Глобальные атрибуты</summary></details></a></li>
-                            <li><a class="left-menu-selector-item" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ&ab"><details><summary>Атрибуты</summary></details></a></li>
-                            <li><a class="left-menu-selector-item" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ&ab"><details><summary>Типы  <code><\input></code></summary></details></a></li>    
-                            <li><a class="left-menu-selector-main" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ&ab">Путеводитель</a></li>
-                            <li><a class="left-menu-selector-item" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ&ab">Категории контента</a></li>  
-                            <li><a class="left-menu-selector-item" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ&ab">Блочные элементы</a></li>  
-                            <li><a class="left-menu-selector-item" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ&ab">Строчные элементы</a></li>  
-                            <li><a class="left-menu-selector-item" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ&ab">Режим совместимости (Quirks Mode) и стандартный режим (Standards Mode)</a></li>  
-                            <li><a class="left-menu-selector-item" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ&ab">Валидация ограничений</a></li>  
-                            <li><a class="left-menu-selector-item" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ&ab">Microdata</a></li>  
-                            <li><a class="left-menu-selector-item" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ&ab">Microformats</a></li>  
+                    <div class="primary-sidebar-selector">
+                        <ul class="primary-sidebar-selector">
+                            <li><a class="primary-sidebar-selector-main" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ&ab">HTML</a></li>
+                            <li><a class="primary-sidebar-selector-item"> </a></li> <!-- Визуально HTML отделен от другими, следовательно это отдельный блок. Поэтому следует вместо 1 большого списка ссылок сделать 4 отдельных списка, и добавить между ними отступ-->
+                            <li><a class="primary-sidebar-selector-main" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ&ab">Уроки</a></li>
+                            <li><a class="primary-sidebar-selector-item" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ&ab">Основы HTML</a></li>    
+                            <li><a class="primary-sidebar-selector-item" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ&ab"><details><summary>Введение в HTML</summary></details></a></li>
+                            <li><a class="primary-sidebar-selector-item" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ&ab"><details><summary>Мультимедиа и встраивание</summary></details></a></li> 
+                            <li><a class="primary-sidebar-selector-item" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ&ab"><details><summary>HTML таблицы</summary></details></a></li> 
+                            <li><a class="primary-sidebar-selector-main" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ&ab">Справочники</a></li>
+                            <li><a class="primary-sidebar-selector-item" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ&ab"><details><summary>HTML элементы</summary></details></a></li>
+                            <li><a class="primary-sidebar-selector-item" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ&ab"><details><summary>Глобальные атрибуты</summary></details></a></li>
+                            <li><a class="primary-sidebar-selector-item" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ&ab"><details><summary>Атрибуты</summary></details></a></li>
+                            <li><a class="primary-sidebar-selector-item" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ&ab"><details><summary>Типы  <code><\input></code></summary></details></a></li>    
+                            <li><a class="primary-sidebar-selector-main" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ&ab">Путеводитель</a></li>
+                            <li><a class="primary-sidebar-selector-item" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ&ab">Категории контента</a></li>  
+                            <li><a class="primary-sidebar-selector-item" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ&ab">Блочные элементы</a></li>  
+                            <li><a class="primary-sidebar-selector-item" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ&ab">Строчные элементы</a></li>  
+                            <li><a class="primary-sidebar-selector-item" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ&ab">Режим совместимости (Quirks Mode) и стандартный режим (Standards Mode)</a></li>  
+                            <li><a class="primary-sidebar-selector-item" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ&ab">Валидация ограничений</a></li>  
+                            <li><a class="primary-sidebar-selector-item" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ&ab">Microdata</a></li>  
+                            <li><a class="primary-sidebar-selector-item" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ&ab">Microformats</a></li>  
                         </ul>
                     </div> 
                 </div>
@@ -146,7 +147,7 @@
                     </div>
                 </div>
 
-                <div class="right-sidebar"> <!--
+                <div class="secondary-sidebar"> <!--
                 Это похоже на sidebad. Причем левый сайдбар можно считать основным (primary-sidebar), поскольку он есть всегда и по нем происходит глобальная навигация по разделу,
                  а правый - вторичным (seconady-sidebar), поскольку он относится непосредственно к пейдже
                   -->
